--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -105,15 +105,15 @@
                 <tr><td class="p-3 font-medium">Porteros</td>
                     <td class="p-3">Paradas, salidas, despejes de puños</td></tr>
                 <tr><td class="p-3 font-medium">Centrales</td>
-                    <td class="p-3">Duelos ganados, despejes, recuperaciones, tiros bloqueados</td></tr>
-                <tr><td class="p-3 font-medium">Laterales</td>
-                    <td class="p-3">Recuperaciones, centros precisos, progresión ofensiva</td></tr>
-                <tr><td class="p-3 font-medium">Pivotes</td>
+                    <td class="p-3">Duelos ganados, recuperaciones, tiros bloqueados</td></tr>
+                <tr><td class="p-3 font-medium">Laterales / carrileros</td>
+                    <td class="p-3">Recuperaciones, centros precisos, duelos ganados</td></tr>
+                <tr><td class="p-3 font-medium">Centrocampistas</td>
                     <td class="p-3">Recuperaciones, duelos ganados</td></tr>
-                <tr><td class="p-3 font-medium">Mediocentros / bandas</td>
-                    <td class="p-3">Goles, asistencias, pases clave, regates exitosos, progresión ofensiva</td></tr>
+                <tr><td class="p-3 font-medium">Bandas</td>
+                    <td class="p-3">Regates exitosos, duelos ganados</td></tr>
                 <tr><td class="p-3 font-medium">Delanteros</td>
-                    <td class="p-3">Goles, tiros a puerta, duelos ganados</td></tr>
+                    <td class="p-3">Tiros a puerta, duelos ganados</td></tr>
                 </tbody>
             </table>
         </div>
