--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -149,6 +149,14 @@
 
 <section class="timeline">
 <div class="card">
+    <img src="Jornada6.jpg" alt="Jornada 6">
+    <div class="info">
+      <h2>Jornada 6</h2>
+      <a href="https://forms.gle/MjGDpXzRmGpVdwgx7" target="_blank">Votación</a>
+    </div>
+  </div>
+  
+<div class="card">
     <img src="Jornada5.jpg" alt="Jornada 5">
     <div class="info">
       <h2>Jornada 5</h2>
@@ -160,7 +168,7 @@
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      <a href="https://forms.gle/aVyq61K58JMMntJaA" target="_blank">Votación</a>
+      <a href="MVP_J4.html" target="_blank">Ver Resultados</a>
     </div>
   </div>
   
