--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -426,31 +426,31 @@
   <script>
     // Datos de los jugadores con los minutos jugados en cada partido
     const jugadores = [
-    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0]},
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90]},
-    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0]},
-    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90, 90, 90]},
-    {nombre: "Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90]},
-    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90]},
-    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0]},
-    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0, 0]},
-    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64, 27, 90, 68]},
-    {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22]},
-    {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75, 0, 45, 0]},
-    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20, 19, 21]},
-    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0, 90, 71, 45]},
-    {nombre: "Kito", goles: 0, asistencias: 1, minutos: [90, 75, 70, 45, 68]},
-    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63, 0, 45]},
-    {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90, 82, 45]},
-    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0, 0, 0, 0]},
-    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90, 90, 90, 69]},
-    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22]},
-    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15, 27, 90, 45]},
-    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0]},
-    {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27, 45, 68]},
-    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22]},
-    {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0]},
-    {nombre: "S. Griñán", goles: 4, asistencias: 0, minutos: [45, 90, 63, 45, 90]}
+    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0, 0]},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90, 0]},
+    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0, 90]},
+    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90, 90, 90, 90]},
+    {nombre: "Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90, 62]},
+    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90, 90]},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0, 53]},
+    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0, 0, 0]},
+    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64, 27, 90, 68, 0]},
+    {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 0]},
+    {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75, 0, 45, 0, 2]},
+    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20, 19, 21, 0]},
+    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0, 90, 71, 45, 90]},
+    {nombre: "Kito", goles: 0, asistencias: 1, minutos: [90, 75, 70, 45, 68, 0]},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63, 0, 45, 90]},
+    {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90, 82, 45, 90]},
+    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0, 0, 0, 0, 0]},
+    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90, 90, 90, 69, 28]},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 62]},
+    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15, 27, 90, 45, 28]},
+    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0]},
+    {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27, 45, 68, 88]},
+    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0]},
+    {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0]},
+    {nombre: "S. Griñán", goles: 4, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90]}
     ];
 
     // Función para obtener la clase de color según el índice de la jornada (patrón de 3)
