--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -155,10 +155,18 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada7.jpg" alt="Jornada 7">
+    <div class="info">
+      <h2>Jornada 7</h2>
+      <a href="InformeJ7.html" target="_blank">Ver Alineación Probable</a>
+    </div>
+  </div>
+  
+  <div class="card">
     <img src="Jornada6.jpg" alt="Jornada 6">
     <div class="info">
       <h2>Jornada 6</h2>
-      <a href="InformeJ6.html" target="_blank">Ver Alineación Probable</a>
+      <a href="InformeJ6.html" target="_blank">Ver Informe</a>
     </div>
   </div>
   
