--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -111,7 +111,7 @@
                 <tr><td class="p-3 font-medium">Centrocampistas</td>
                     <td class="p-3">Recuperaciones, duelos ganados</td></tr>
                 <tr><td class="p-3 font-medium">Bandas</td>
-                    <td class="p-3">Regates exitosos, duelos ganados</td></tr>
+                    <td class="p-3">Regates exitosos, duelos en el suelo ganados</td></tr>
                 <tr><td class="p-3 font-medium">Delanteros</td>
                     <td class="p-3">Tiros a puerta, duelos ganados</td></tr>
                 </tbody>
