--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -158,7 +158,13 @@
         </div>
       </div>
     </section>
+  
+<!-- En el 95% de los casos, un jugador expulsado terminará con una puntuación por debajo de 6.0.
 
+ Lo más común es ver puntuaciones finales entre 4.5 y 5.8 después de una expulsión.
+
+ Una puntuación por encima de 6.0 tras una roja es extremadamente rara y solo pasaría si fue en el minuto 90+ y el jugador había sido absolutamente determinante hasta ese momento. -->
+  
     <footer class="text-center text-gray-500 text-sm mt-10">
       Los valores pueden variar según el contexto del partido y la actuación global del jugador.
     </footer>
