--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -988,7 +988,7 @@
       // Datos de los jugadores organizados por posición - ONCE FINAL
       const playersFinal = {
         'portero': [
-          { number: '1', name: 'Gabri' }
+          { number: '13', name: 'Álvaro' }
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
