--- a/InformeJ7.html
+++ b/InformeJ7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informe Jornada 6</title>
+  <title>Informe Jornada 7</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
@@ -736,23 +736,23 @@
       // MODIFICADO: Agregar campo 'cards' a cada jugador
       const playersConfirmada = {
         'portero': [
-          { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '1', name: 'Gabri', rating: '9,0', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: '🟥' },
-          { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+          { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 0, cards: '🟥' },
+          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: '🟨' }
         ],
         'mediocentros': [
-          { number: '24', name: 'H. Panizo', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '10', name: 'Kito', rating: '-', goals: 0, assists: 0, cards: '🟨' },
           { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' }
+          { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 1, cards: null },
+          { number: '20', name: 'A. Molina', rating: '-', goals: 1, assists: 0, cards: null }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-', goals: 1, assists: 1, cards: null }
+          { number: '9', name: 'S. Griñán', rating: '-', goals: 0, assists: 0, cards: null }
         ]
       };
 
@@ -760,8 +760,8 @@
       const benchPlayers = [
         { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '4', name: 'Á. Infante', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '23', name: 'J. Pardo', rating: '-', goals: 1, assists: 0, cards: null },
+        { number: '23', name: 'J. Pardo', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
