--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -450,7 +450,8 @@
     {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27, 45, 68, 88, 52]},
     {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0, 0]},
     {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0, 0]},
-    {nombre: "S. Griñán", goles: 4, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90]}
+    {nombre: "S. Griñán", goles: 4, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90]},
+    {nombre: "Manu (JC)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29]}
     ];
 
     // Función para obtener la clase de color según el índice de la jornada (patrón de 3)
