--- a/InformeJ7.html
+++ b/InformeJ7.html
@@ -739,31 +739,29 @@
           { number: '1', name: 'Gabri', rating: '9,0', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
-          { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 0, cards: '🟥' },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: '🟨' }
+          { number: '7', name: 'J. Martínez', rating: '7,3', goals: 0, assists: 0, cards: '🟨' },
+          { number: '5', name: 'Adriano', rating: '7,1', goals: 0, assists: 0, cards: '🟥' },
+          { number: '2', name: 'Á. Brito', rating: '7,7', goals: 0, assists: 0, cards: null },
+          { number: '17', name: 'J. Zarcero', rating: '7,3', goals: 0, assists: 0, cards: '🟨' }
         ],
         'mediocentros': [
-          { number: '10', name: 'Kito', rating: '-', goals: 0, assists: 0, cards: '🟨' },
-          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 1, cards: null },
-          { number: '20', name: 'A. Molina', rating: '-', goals: 1, assists: 0, cards: null }
+          { number: '10', name: 'Kito', rating: '6,8', goals: 0, assists: 0, cards: '🟨' },
+          { number: '21', name: 'Víctor Jaén', rating: '6,7', goals: 0, assists: 0, cards: null },
+          { number: '3', name: 'Mario', rating: '7,2', goals: 0, assists: 0, cards: null },
+          { number: '14', name: 'J. Ogayar', rating: '7,4', goals: 0, assists: 1, cards: null },
+          { number: '20', name: 'A. Molina', rating: '7,6', goals: 1, assists: 0, cards: null }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '9', name: 'S. Griñán', rating: '5,8', goals: 0, assists: 0, cards: null }
         ]
       };
 
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
-        { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '4', name: 'Á. Infante', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '23', name: 'J. Pardo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '34', name: 'Manu', rating: '6,6', goals: 0, assists: 0, cards: null },
+        { number: '8', name: 'Rodri de Castro', rating: '6,7', goals: 0, assists: 0, cards: null },
+        { number: '24', name: 'H. Panizo', rating: '7,0', goals: 0, assists: 0, cards: null },
         { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
       ];
 
