--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -936,7 +936,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
       
-      { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', performances:[
+      { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'Duda', performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
@@ -1011,7 +1011,8 @@
 
     // 📰 Noticias del equipo
     const news = [
-      { playerId: 10, title: 'Lesión', text: "Molestias en el pie, desconocido" },
+      { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
+      { playerId: 10, title: 'Lesión', text: "Molestias en el tobillo, desconocido" },
       { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
       { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
       { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
