--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -713,7 +713,7 @@
       <div class="players-section">
         <div class="players-header">
           <h2 class="players-title">Plantilla del Equipo</h2>
-          <div class="players-count">Mostrando <span id="showingCount">25</span> de 25 jugadores</div>
+          <div class="players-count">Mostrando <span id="showingCount">26</span> de 26 jugadores</div>
         </div>
         <div id="gridView" class="players-grid">
           <!-- Las tarjetas de jugadores se cargarán aquí -->
@@ -832,7 +832,7 @@
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'}
       ]},
       
-      { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', performances:[
+      { id:6, name:'Rafa Crooke', pos:'Defensa', status:'Duda', performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
@@ -1048,6 +1048,7 @@
     const news = [
       { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
       { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
+      { playerId: 6, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
       { playerId: 10, title: 'Lesión', text: "Molestias en el tobillo, desconocido" },
       { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
       { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
