--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 8</h1>
-    <div class="resultado-principal">CDE Fútbol Club Samba-Las Rozas 1-1 EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' - CDE Aupa - Mentema Boadilla 'A'</div>
   </div>
 
   <!-- Alineación Probable -->
