--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -740,16 +740,16 @@
         ],
         'defensas': [
           { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: '🟥' },
+          { number: '15', name: 'Jacobo', rating: '5,4', goals: 0, assists: 0, cards: '🟥' },
           { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
           { number: '24', name: 'H. Panizo', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '3', name: 'Mario', rating: '6,0', goals: 0, assists: 0, cards: null },
           { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' }
+          { number: '7', name: 'J. Martínez', rating: '6,6', goals: 0, assists: 0, cards: '🟨' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán', rating: '-', goals: 1, assists: 1, cards: null }
