--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -817,7 +817,7 @@
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
@@ -837,7 +837,7 @@
         {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
-        {points:11, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (8,2+🅰️)'},
+        {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
@@ -1029,17 +1029,17 @@
         {points:7, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (6,8+⚽🅿️)'},
         {points:0, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,1)'},
         {points:11, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (7,0+⚽)'},
-        {points:null, minutes:90, goals:1, assists:1, cards:0, comment:'⚽🅰️ (0,0+⚽+🅰️)'},
+        {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'}
       ]},
       
-      { id:26, name:'Manu (JC)', pos:'Defensa', status:'OK', performances:[
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JC'},
+      { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', performances:[
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:3, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
       ]}
     ];
