--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -745,7 +745,7 @@
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
-          { number: '24', name: 'H. Panizo', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '24', name: 'H. Panizo', rating: '6,4', goals: 0, assists: 0, cards: null },
           { number: '3', name: 'Mario', rating: '6,0', goals: 0, assists: 0, cards: null },
           { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
