--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -999,7 +999,7 @@
         {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
         {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:6, minutes:68, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'},
-        {points:null, minutes:88, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:2, minutes:88, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:6, minutes:52, goals:0, assists:0, cards:0, comment:'↩️ (7,3)'}
       ]},
       
