--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 6</h1>
-    <div class="resultado-principal">CD Retamar 3-2 EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' 2-1 CD Prodet Pozuelo</div>
   </div>
 
   <!-- Alineación Probable -->
