--- a/InformeJ6.html
+++ b/InformeJ6.html
@@ -736,23 +736,23 @@
       // MODIFICADO: Agregar campo 'cards' a cada jugador
       const playersConfirmada = {
         'portero': [
-          { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '13', name: 'Álvaro', rating: '6,5', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '16', name: 'Luisja', rating: '8,6', goals: 0, assists: 0, cards: null },
           { number: '15', name: 'Jacobo', rating: '5,4', goals: 0, assists: 0, cards: '🟥' },
-          { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '6', name: 'Rafa', rating: '7,4', goals: 0, assists: 0, cards: null },
+          { number: '17', name: 'J. Zarcero', rating: '7,9', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
           { number: '24', name: 'H. Panizo', rating: '6,4', goals: 0, assists: 0, cards: null },
           { number: '3', name: 'Mario', rating: '6,0', goals: 0, assists: 0, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '7', name: 'J. Martínez', rating: '6,6', goals: 0, assists: 0, cards: '🟨' }
+          { number: '2', name: 'Á. Brito', rating: '8,7', goals: 0, assists: 0, cards: null },
+          { number: '21', name: 'Víctor Jaén', rating: '5,1', goals: 0, assists: 0, cards: null },
+          { number: '7', name: 'J. Martínez', rating: '6,7', goals: 0, assists: 0, cards: '🟨' }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-', goals: 1, assists: 1, cards: null }
+          { number: '9', name: 'S. Griñán', rating: '7,1', goals: 1, assists: 0, cards: null }
         ]
       };
 
@@ -760,10 +760,10 @@
       const benchPlayers = [
         { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '4', name: 'Á. Infante', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '23', name: 'J. Pardo', rating: '-', goals: 1, assists: 0, cards: null },
+        { number: '14', name: 'J. Ogayar', rating: '7,0', goals: 0, assists: 0, cards: null },
+        { number: '23', name: 'J. Pardo', rating: '7,2', goals: 1, assists: 0, cards: null },
         { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '20', name: 'A. Molina', rating: '6,5', goals: 0, assists: 0, cards: null },
         { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
       ];
 
