--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
   </a>
 </div>
 
+<a href="descargar.html" style="display: inline-block; background: #4CAF50; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; margin: 10px;">
+    📱 Descargar App
+</a>
+  
 <footer>
   Creador de la página web:<br>Gabriel Veiga Álvarez
 </footer>
