--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
     <div class="panel-title">Simbología y sistema de puntuación</div>
   </a>
 </div>
+
+<link rel="manifest" href="manifest.json">
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/EFMO_BOADILLA/service-worker.js');
+  }
+</script>
+
   
 <footer>
   Creador de la página web:<br>Gabriel Veiga Álvarez
