--- a/index.html
+++ b/index.html
@@ -153,6 +153,22 @@
       .panel-title {
         font-size: 1.1em;
       }
+
+      #installButton {
+  display: none;
+  background: linear-gradient(135deg, #0078ff, #00c6ff);
+  color: white;
+  font-size: 1.1em;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+#installButton:hover {
+  transform: scale(1.05);
+}
+
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
