--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E.F.M.O. Boadilla 'B'</title>
+  <link rel="manifest" href="/EFMO_BOADILLA/manifest.json">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
+
+    #installButton {
+  display: none;
+  background: linear-gradient(135deg, #0078ff, #00c6ff);
+  color: white;
+  font-size: 1.1em;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+#installButton:hover {
+  transform: scale(1.05);
+}
+
+    
     * {
       box-sizing: border-box;
     }
@@ -154,21 +172,6 @@
         font-size: 1.1em;
       }
 
-      #installButton {
-  display: none;
-  background: linear-gradient(135deg, #0078ff, #00c6ff);
-  color: white;
-  font-size: 1.1em;
-  border: none;
-  padding: 12px 24px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  transition: 0.3s;
-}
-#installButton:hover {
-  transform: scale(1.05);
-}
-
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -255,6 +258,14 @@
 <footer>
   Creador de la página web:<br>Gabriel Veiga Álvarez
 </footer>
+  
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/EFMO_BOADILLA/service-worker.js')
+      .then(() => console.log('✅ Service worker registrado'))
+      .catch(err => console.error('❌ Error registrando service worker', err));
+  }
+</script>
 
 </body>
 </html>
