--- a/index.html
+++ b/index.html
@@ -187,22 +187,22 @@
 </div>
 
 <div class="panel-container">
-  <a href="FantasyEfmo.html" target="_blank" class="panel">
+  <a href="FantasyEfmo.html" class="panel">
     <div class="panel-icon"><i class="fas fa-futbol"></i></div>
     <div class="panel-title">Fantasy EFMO</div>
   </a>
 
-  <a href="InformesPost_partido.html" target="_blank" class="panel">
+  <a href="InformesPost_partido.html" class="panel">
     <div class="panel-icon"><i class="fas fa-file-alt"></i></div>
     <div class="panel-title">Informes post-partido</div>
   </a>
 
-  <a href="Stats25-26.html" target="_blank" class="panel">
+  <a href="Stats25-26.html" class="panel">
     <div class="panel-icon"><i class="fas fa-chart-line"></i></div>
     <div class="panel-title">Stats Temp. 25/26</div>
   </a>
 
-  <a href="Encuestas_MVP2526.html" target="_blank" class="panel">
+  <a href="Encuestas_MVP2526.html" class="panel">
     <div class="panel-icon"><i class="fas fa-star"></i></div>
     <div class="panel-title">Encuestas MVP</div>
   </a>
@@ -212,7 +212,7 @@
     <div class="panel-title">Jugadores EA Sports FC 26</div>
   </a>
 
-  <a href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html" target="_blank" class="panel">
+  <a href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html" class="panel">
     <div class="panel-icon"><i class="fas fa-clipboard-list"></i></div>
     <div class="panel-title">Simbología y sistema de puntuación</div>
   </a>
