--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -158,7 +158,7 @@
     <img src="Jornada8.jpg" alt="Jornada 8">
     <div class="info">
       <h2>Jornada 8</h2>
-      <a href="InformeJ8.html" target="_blank">Ver Alineación Probable</a>
+      <a href="InformeJ8.html">Ver Alineación Probable</a>
     </div>
   </div>
   
@@ -166,7 +166,7 @@
     <img src="Jornada7.jpg" alt="Jornada 7">
     <div class="info">
       <h2>Jornada 7</h2>
-      <a href="InformeJ7.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ7.html">Ver Informe</a>
     </div>
   </div>
   
@@ -174,7 +174,7 @@
     <img src="Jornada6.jpg" alt="Jornada 6">
     <div class="info">
       <h2>Jornada 6</h2>
-      <a href="InformeJ6.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ6.html">Ver Informe</a>
     </div>
   </div>
   
@@ -182,7 +182,7 @@
     <img src="Jornada5.jpg" alt="Jornada 5">
     <div class="info">
       <h2>Jornada 5</h2>
-      <a href="InformeJ5.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ5.html">Ver Informe</a>
     </div>
   </div>
   
@@ -190,7 +190,7 @@
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      <a href="InformeJ4.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ4.html">Ver Informe</a>
     </div>
   </div>
 
@@ -198,7 +198,7 @@
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
       <h2>Jornada 3</h2>
-      <a href="InformeJ3.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ3.html">Ver Informe</a>
     </div>
   </div>
 
@@ -206,7 +206,7 @@
     <img src="Jornada2.jpg" alt="Jornada 2">
     <div class="info">
       <h2>Jornada 2</h2>
-      <a href="InformeJ2.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ2.html">Ver Informe</a>
     </div>
   </div>
 
@@ -214,7 +214,7 @@
     <img src="Jornada1.jpg" alt="Jornada 1">
     <div class="info">
       <h2>Jornada 1</h2>
-      <a href="InformeJ1.html" target="_blank">Ver Informe</a>
+      <a href="InformeJ1.html">Ver Informe</a>
     </div>
   </div>
 
