--- a/InformeJ7.html
+++ b/InformeJ7.html
@@ -759,7 +759,7 @@
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
         { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '34', name: 'Manu (JC)', rating: '6,6', goals: 0, assists: 0, cards: null },
+        { number: '34', name: 'Manu (JB)', rating: '6,6', goals: 0, assists: 0, cards: null },
         { number: '8', name: 'Rodri de Castro', rating: '6,7', goals: 0, assists: 0, cards: null },
         { number: '24', name: 'H. Panizo', rating: '7,3', goals: 0, assists: 0, cards: null },
         { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
