--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -168,7 +168,7 @@
     <img src="Jornada5.jpg" alt="Jornada 5">
     <div class="info">
       <h2>Jornada 5</h2>
-      <a href="MVP_J5.html" target="_blank">Ver Resultados</a>
+      <a href="MVP_J5.html">Ver Resultados</a>
     </div>
   </div>
   
@@ -176,7 +176,7 @@
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      <a href="MVP_J4.html" target="_blank">Ver Resultados</a>
+      <a href="MVP_J4.html">Ver Resultados</a>
     </div>
   </div>
   
@@ -184,7 +184,7 @@
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
       <h2>Jornada 3</h2>
-      <a href="MVP_J3.html" target="_blank">Ver Resultados</a>
+      <a href="MVP_J3.html">Ver Resultados</a>
     </div>
   </div>
 
@@ -192,7 +192,7 @@
     <img src="Jornada2.jpg" alt="Jornada 2">
     <div class="info">
       <h2>Jornada 2</h2>
-      <a href="MVP_J2.html" target="_blank">Ver Resultados</a>
+      <a href="MVP_J2.html">Ver Resultados</a>
     </div>
   </div>
 
@@ -200,7 +200,7 @@
     <img src="Jornada1.jpg" alt="Jornada 1">
     <div class="info">
       <h2>Jornada 1</h2>
-      <a href="MVP_J1.html" target="_blank">Ver Resultados</a>
+      <a href="MVP_J1.html">Ver Resultados</a>
     </div>
   </div>
 
