--- a/InformeJ7.html
+++ b/InformeJ7.html
@@ -950,7 +950,7 @@
         <div class="jugadores-cambio">
           <span>J. Ogayar</span>
           <span class="flecha">→</span>
-          <span>Manu (JC)</span>
+          <span>Manu (JB)</span>
         </div>
       </div>
       <div class="cambio">
