--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -802,7 +802,7 @@
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'}
       ]},
       
-      { id:3, name:'Álvaro', pos:'Portero', status:'OK', performances:[
+      { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -1046,6 +1046,7 @@
 
     // 📰 Noticias del equipo
     const news = [
+      { playerId: 3, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
       { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
       { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
       { playerId: 6, title: 'Duda', text: "Molestias en el tobillo, desconocido" },
