--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -429,8 +429,8 @@
     {nombre: "J. Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0, 0, 0, 0]},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90, 0, 90, 0]},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0, 90, 0, 90]},
-    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90, 90, 90, 90, 0, 90]},
-    {nombre: "J. Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90, 62, 90, 57]},
+    {nombre: "Luisja", goles: 0, asistencias: 1, minutos: [90, 90, 90, 90, 90, 90, 0, 90]}, //1 asistencia?
+    {nombre: "J. Martínez", goles: 1, asistencias: 1, minutos: [90, 90, 63, 90, 90, 62, 90, 57]}, //1 asistencia?
     {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90, 90, 0, 0]},
     {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0, 53, 0, 0]},
     {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0, 0, 0, 0, 0]},
@@ -450,7 +450,7 @@
     {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27, 45, 68, 88, 52, 45]},
     {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0, 0, 8]},
     {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0, 0, 0]},
-    {nombre: "S. Griñán", goles: 5, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90, 90]},
+    {nombre: "S. Griñán", goles: 7, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90, 90]},
     {nombre: "Manu (JB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 0]}
     ];
 
