--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -844,6 +844,7 @@
         {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:7, minutes:90, goals:0, assists:0, cards:0, comment:'(7,4)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
       
@@ -854,6 +855,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:-8, minutes:53, goals:0, assists:0, cards:0, comment:'🟥 (5,4+🟥)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'}
       ]},
       
@@ -861,6 +863,7 @@
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1079,7 +1082,7 @@
       { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
       { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
       { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
-      { playerId: 8, title: 'Duda', text: "Pubalgia, 3-5 semanas" },
+      { playerId: 8, title: 'Duda', text: "Pubalgia, 4-6 semanas" },
       { playerId: 24, title: 'Lesión', text: "Edema óseo, 5-6 semanas" },
       //{ playerId: 9, title: 'Duda', text: "Molestias en el talón, 4-6 semanas" },
       { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
