--- a/InformeJ7.html
+++ b/InformeJ7.html
@@ -987,7 +987,7 @@
         ],
         'defensas': [
           { number: '7', name: 'J. Martínez' },
-          { number: '34', name: 'Manu (JC)' },
+          { number: '34', name: 'Manu (JB)' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
