--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -148,11 +148,18 @@
 </header>
 
 <section class="timeline">
+  <div class="card">
+    <img src="Jornada8.jpg" alt="Jornada 8">
+    <div class="info">
+      <h2>Jornada 8</h2>
+      <a href="https://forms.gle/XDzneb4wgYBB3CYd7" target="_blank">Votación</a>
+    </div>
+  </div>
 <div class="card">
     <img src="Jornada7.jpg" alt="Jornada 7">
     <div class="info">
       <h2>Jornada 7</h2>
-      <a href="https://forms.gle/ex8NVKMYNze2Vtjf6" target="_blank">Votación</a>
+      <a href="MVP_J7.html">Ver Resultados</a>
     </div>
   </div>
   
