--- a/InformeJ9.html
+++ b/InformeJ9.html
@@ -645,15 +645,15 @@
         'defensas': [
           { number: '16', name: 'Luisja' },
           { number: '5', name: 'Adriano' },
-          { number: '7', name: 'J. Martínez' },
+          { number: '25', name: 'Rodri' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
           { number: '10', name: 'Kito' },
           { number: '14', name: 'J. Ogayar' },
           { number: '3', name: 'Mario' },
-          { number: '23', name: 'Javi Pardo' },
-          { number: '24', name: 'H. Panizo' }
+          { number: '23', name: 'Pablo' },
+          { number: '24', name: 'A. Molina' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán' }
