--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -1028,7 +1028,7 @@
           { number: '24', name: 'H. Panizo' }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán' },
+          { number: '9', name: 'S. Griñán' }
         ]
       };
 
