--- a/InformeJ9.html
+++ b/InformeJ9.html
@@ -737,35 +737,33 @@
       // MODIFICADO: Agregar campo 'cards' a cada jugador
       const playersConfirmada = {
         'portero': [
-          { number: '22', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '1', name: 'Gabri', rating: '7,1', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 1, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 1, cards: null }
+          { number: '16', name: 'Luisja', rating: '7,3', goals: 0, assists: 0, cards: null },
+          { number: '5', name: 'Adriano', rating: '7,4', goals: 0, assists: 1, cards: null },
+          { number: '25', name: 'Rodri', rating: '6,5', goals: 0, assists: 0, cards: null },
+          { number: '17', name: 'J. Zarcero', rating: '7,5', goals: 0, assists: 1, cards: null }
         ],
         'mediocentros': [
-          { number: '10', name: 'Kito', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '8', name: 'Rodri de Castro', rating: '7,0', goals: 0, assists: 0, cards: null },
+          { number: '19', name: 'Pablo', rating: '7,4', goals: 1, assists: 0, cards: null },
+          { number: '3', name: 'Mario', rating: '7,3', goals: 0, assists: 0, cards: null },
+          { number: '14', name: 'J. Ogayar', rating: '6,7', goals: 0, assists: 0, cards: null },
+          { number: '10', name: 'Kito', rating: '7,4', goals: 0, assists: 0, cards: null }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-', goals: 1, assists: 0, cards: null }
+          { number: '9', name: 'S. Griñán', rating: '6,9', goals: 1, assists: 0, cards: null }
         ]
       };
 
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
-        { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '19', name: 'Pablo', rating: '-', goals: 1, assists: 0, cards: null },
-        { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '24', name: 'H. Panizo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
+        { number: '13', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '4', name: 'Á. Infante', rating: '6,6', goals: 0, assists: 0, cards: null },
+        { number: '21', name: 'Víctor Jaén', rating: '6,5', goals: 0, assists: 0, cards: null },
+        { number: '20', name: 'A. Molina', rating: '6,7', goals: 0, assists: 0, cards: null },
+        { number: '11', name: 'Manu Medina', rating: '6,3', goals: 0, assists: 0, cards: null }
       ];
 
       // Configuraciones de formaciones
