--- a/InformeJ9.html
+++ b/InformeJ9.html
@@ -618,7 +618,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 9</h1>
-    <div class="resultado-principal">EE PP San Fernando Escolapios Pozuelo - EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">EE PP San Fernando Escolapios Pozuelo 4-2 EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
