--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -876,7 +876,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:70, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'} //minutos no oficiales
+        {points:2, minutes:70, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'} //minutos no oficiales
       ]},
       
       { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
