--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -149,6 +149,13 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada9.jpg" alt="Jornada 9">
+    <div class="info">
+      <h2>Jornada 9</h2>
+      <a href="https://forms.gle/m96b5WN4VfqPKa2J8" target="_blank">Votación</a>
+    </div>
+  </div>
+  <div class="card">
     <img src="Jornada8.jpg" alt="Jornada 8">
     <div class="info">
       <h2>Jornada 8</h2>
@@ -167,7 +174,7 @@
     <img src="Jornada6.jpg" alt="Jornada 6">
     <div class="info">
       <h2>Jornada 6</h2>
-      <a href="https://forms.gle/MjGDpXzRmGpVdwgx7" target="_blank">Votación</a>
+      <a href="MVP_J6.html">Ver Resultados</a>
     </div>
   </div>
   
