--- a/InformeJ9.html
+++ b/InformeJ9.html
@@ -753,7 +753,7 @@
           { number: '10', name: 'Kito', rating: '7,4', goals: 0, assists: 0, cards: null }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '6,9', goals: 1, assists: 0, cards: null }
+          { number: '9', name: 'S. Griñán', rating: '7,0', goals: 1, assists: 0, cards: null }
         ]
       };
 
@@ -942,7 +942,7 @@
     <h3>Cambios Realizados</h3>
     <div class="cambios-lista">
       <div class="cambio">
-        <span class="minuto"></span>
+        <span class="minuto">65'</span>
         <div class="jugadores-cambio">
           <span>Rodri</span>
           <span class="flecha">→</span>
@@ -950,15 +950,7 @@
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto"></span>
-        <div class="jugadores-cambio">
-          <span>Rodri de Castro</span>
-          <span class="flecha">→</span>
-          <span>A. Molina</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto"></span>
+        <span class="minuto">70'</span>
         <div class="jugadores-cambio">
           <span>Pablo</span>
           <span class="flecha">→</span>
@@ -966,7 +958,15 @@
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto"></span>
+        <span class="minuto">75'</span>
+        <div class="jugadores-cambio">
+          <span>Rodri de Castro</span>
+          <span class="flecha">→</span>
+          <span>A. Molina</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">75'</span>
         <div class="jugadores-cambio">
           <span>Kito</span>
           <span class="flecha">→</span>
