--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -781,7 +781,7 @@
 
 <script>
   // Datos de jugadores y noticias (igual que en tu código original)
-  // Minutos (de algunos) no oficiales (J9)
+  // {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
   const players = [
     { id:1, name:'J. Agudo', pos:'Portero', status:'Duda', performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
