--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -149,6 +149,13 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada10.jpg" alt="Jornada 10">
+    <div class="info">
+      <h2>Jornada 10</h2>
+      <a href="https://forms.gle/tq8rMqhwqwzCWVq56" target="_blank">Votación</a>
+    </div>
+  </div>
+  <div class="card">
     <img src="Jornada9.jpg" alt="Jornada 9">
     <div class="info">
       <h2>Jornada 9</h2>
