--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1317,7 +1317,7 @@
     card.innerHTML = `
       <div class="player-header">
         <div class="player-info">
-          // <div class="player-name">${p.name}${isSpecial ? ' <span class="text-xs text-gray-400">(Juvenil B)</span>' : ''}</div>
+          <div class="player-name">${p.name}${isSpecial ? ' <span class="text-xs text-gray-400"></span>' : ''}</div>
           <div class="player-position ${getPositionClass(p.pos)}">${p.pos}</div>
         </div>
         <div class="player-points">
